--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,3 +1,15 @@
+buildscript {
+    repositories {
+        google()
+        mavenCentral()
+    }
+
+    dependencies {
+        classpath 'com.android.tools.build:gradle:8.1.2'  // ✅ Add this line (Gradle Plugin)
+        classpath 'com.google.gms:google-services:4.4.2'  // ✅ Ensure this line is correct
+    }
+}
+
 allprojects {
     repositories {
         google()
@@ -9,6 +21,7 @@ rootProject.buildDir = "../build"
 subprojects {
     project.buildDir = "${rootProject.buildDir}/${project.name}"
 }
+
 subprojects {
     project.evaluationDependsOn(":app")
 }
