--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,12 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
 
+  # Firebase Dependencies
+  firebase_core: ^2.32.0
+  firebase_auth: ^4.20.0
+  firebase_auth_platform_interface: ^7.0.0
+  firebase_storage: ^11.2.4
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
