--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   firebase_auth: ^4.20.0
   firebase_auth_platform_interface: ^7.0.0
   firebase_storage: ^11.2.4
+  cloud_firestore: ^4.17.5
 
 dev_dependencies:
   flutter_test:
