--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   percent_indicator: ^4.2.2
   fl_chart: ^0.70.0
   smooth_page_indicator: ^1.1.0
+  intl: ^0.18.0  # Ensure this is the latest version
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
