--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -74,6 +74,7 @@ flutter:
   assets:
     - assets/logo.png
     - assets/sandwich.jpg
+    - assets/profilePicture.jpg
     - assets/icons/
 
   # An image asset can refer to one or more resolution-specific "variants", see
