--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,7 +33,9 @@ dependencies:
   percent_indicator: ^4.2.2
   fl_chart: ^0.70.0
   smooth_page_indicator: ^1.1.0
-  intl: ^0.18.0  # Ensure this is the latest version
+  intl: ^0.18.0
+  dropdown_button2: ^2.3.9
+#  google_sign_in: ^6.1.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -73,6 +75,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/logo.png
+    - assets/
     - assets/sandwich.jpg
     - assets/profilePicture.jpg
     - assets/icons/
