--- a/android/build.gradle
+++ b/android/build.gradle
@@ -5,7 +5,8 @@ buildscript {
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:8.1.2'  // ✅ Add this line (Gradle Plugin)
+//        classpath 'com.android.tools.build:gradle:8.1.2'  // ✅ Add this line (Gradle Plugin)
+        classpath 'com.android.tools.build:gradle:8.2.1'
         classpath 'com.google.gms:google-services:4.4.2'  // ✅ Ensure this line is correct
     }
 }
