--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,7 +35,12 @@ dependencies:
   smooth_page_indicator: ^1.1.0
   intl: ^0.18.0
   dropdown_button2: ^2.3.9
-#  google_sign_in: ^6.1.1
+  firebase_messaging: ^14.6.7
+  flutter_local_notifications: 15.1.1
+
+
+
+  #  google_sign_in: ^6.1.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -53,6 +58,12 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   http: ^1.3.0
+  flutter_launcher_icons: ^0.13.1
+
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/logo.png"
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
